clusters/main/kubernetes/system/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: domain-0-le-prod
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
    - host: longhorn.${DOMAIN_0}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.${DOMAIN_0}
      secretName: longhorn-tls-0
